# math-solver

./: .gitignore  README.md  behavioural_questions.md  commitlint.config.js  docker-compose.yml  nginx.conf  package-lock.json  package.json
docs/: COMMITLINT.md  requirement.md
src/backend/: .gitignore  .pre-commit-config.yaml  AUTHENTICATION.md  Dockerfile  LINTING.md  Makefile  PARALLEL_EVALUATION.md  deepeval_config.py  pyproject.toml  pytest.ini  requirements.txt
src/backend/.deepeval/: .deepeval_telemetry.txt
src/backend/app/: __init__.py  main.py
src/backend/app/api/: endpoints.py
src/backend/app/core/: auth.py  config.py  middleware.py  utils.py
src/backend/app/database/: __init__.py  firebase_client.py
src/backend/app/models/: problem.py
src/backend/app/modules/: __init__.py  conftest.py
src/backend/app/modules/auth/domain/: entities.py  interfaces.py
src/backend/app/modules/auth/infrastructure/: firebase_auth_service.py
src/backend/app/modules/auth/tests/: conftest.py  test_entities.py  test_firebase_auth_service.py
src/backend/app/modules/math_solving/: __init__.py
src/backend/app/modules/math_solving/application/: dto.py  use_cases.py
src/backend/app/modules/math_solving/domain/: entities.py  interfaces.py
src/backend/app/modules/math_solving/evaluation/: metrics.py  run_evaluation.py  test_math_solver_deepeval.py
src/backend/app/modules/math_solving/infrastructure/: ai_service.py  repository.py
src/backend/app/modules/math_solving/presentation/: __init__.py  endpoints.py
src/backend/app/modules/math_solving/tests/: __init__.py  conftest.py  test_ai_service.py  test_entities.py  test_use_cases.py
src/backend/app/modules/shared/: __init__.py  config.py  container.py  utils.py
src/backend/app/modules/shared/database/: __init__.py  firebase_client.py
src/backend/app/modules/shared/tests/: test_config.py  test_container.py
src/backend/app/services/: image_processor.py  math_solver.py
src/backend/docs/: README.md  api-reference.md  authentication.md  deployment.md  development.md  evaluation.md  test-runner-guide.md  testing.md  troubleshooting.md
src/backend/tests/: conftest.py  run_tests.py  run_tests_new.py
src/backend/tests/evaluation/: metrics.py  run_evaluation.py  test_math_solver_deepeval.py
src/backend/tests/evaluation/usecases/: 0.json
src/backend/tests/integration/: test_api_endpoints.py  test_main.py
src/backend/tests/unit/: test_auth.py  test_firebase_client.py  test_image_processor.py  test_math_solver.py
src/frontend/: .gitignore  pubspec.yaml
src/frontend/android/app/: build.gradle
src/frontend/lib/: firebase_options.dart  main.dart
src/frontend/lib/models/: math_solution.dart
src/frontend/lib/screens/: home_screen.dart
src/frontend/lib/services/: api_service.dart
src/frontend/lib/widgets/: image_preview.dart  solution_display.dart
src/scripts/: deploy.sh  setup.sh
test_data/: sample_problems.md
